Event card: FIxed margin-top scaling on mobile margin was set to 4px on mobile, but card was sized for a margin of 6px. Changed margin to 6px on all viewports to match card sizing

--- a/src/components/EventsContent/EventCard.css
+++ b/src/components/EventsContent/EventCard.css
@@ -22,7 +22,7 @@
 .event-card-container .event-img img{
     width: 315px;
     max-width: 90vw;
-    margin: 4px;
+    margin: 6px;
     border-radius: 20px;
 }
 .event-card-container .event-text{
